--- a/.github/workflows/ci-dockerhub.yml
+++ b/.github/workflows/ci-dockerhub.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           python-version: "3.11"
 
+      # ✅ ADD THIS STEP
+      - name: Debug files
+        run: ls -la
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
