--- a/.github/workflows/ci-dockerhub.yml
+++ b/.github/workflows/ci-dockerhub.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r python-ci-docker-lab/requirements.txt
 
       - name: Run tests
         run: pytest -q
