--- a/.github/workflows/ci-dockerhub.yml
+++ b/.github/workflows/ci-dockerhub.yml
@@ -26,14 +26,14 @@ jobs:
         run: ls -la
 
       - name: Install dependencies
+        working-directory: python-ci-docker-lab
         run: |
           python -m pip install --upgrade pip
-          pip install -r python-ci-docker-lab/requirements.txt
+          pip install -r requirements.txt
 
       - name: Run tests
-        run: |
-                cd python-ci-docker-lab
-                pytest -q
+        working-directory: python-ci-docker-lab
+        run: pytest -q
 
       - name: Docker meta
         id: meta
