--- a/.github/workflows/ci-dockerhub.yml
+++ b/.github/workflows/ci-dockerhub.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: ["main"]
     tags: ["*"]
-
   pull_request:
     branches: ["main"]
 
@@ -13,28 +12,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout repository
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ✅ ADD THIS STEP
-      - name: Debug files
-        run: ls -la
-
+      # 3️⃣ Install dependencies
       - name: Install dependencies
-        working-directory: python-ci-docker-lab
+        working-directory: ./python-ci-docker-lab
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 4️⃣ Run tests
       - name: Run tests
-        working-directory: python-ci-docker-lab
+        working-directory: ./python-ci-docker-lab
         run: pytest -q
 
+      # 5️⃣ Generate Docker metadata (tags)
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -45,15 +45,18 @@ jobs:
             type=sha,prefix=sha-,format=short
             type=ref,event=tag
 
-      - name: Set up Buildx
+      # 6️⃣ Setup Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 7️⃣ Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # 8️⃣ Build and Push Image
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
